--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ a:hover {
 /* SECTIONS */
 
 section {
-  min-height: calc(100vh - 17vh); /* Adjust this value based on your nav height */
+  min-height: calc(50vh - 17vh); /* Adjust this value based on your nav height */
   padding-top: 4vh;
   padding-bottom: 4vh; /* Add padding to the bottom */
   margin: 0 10rem;
@@ -378,8 +378,7 @@ position: relative;
 .tech-stack {
   display: flex;
   flex-wrap: wrap;
-  gap: 0.625rem; /* Use rem for consistency */
-  justify-content: center; /* Center align tech stack items */
+  gap: 10px; /* Use rem for consistency */
   margin-top: 1rem;
 }
 
